Typesikker naring (#390)
Co-authored-by: Runar Skagestad <runska@gmail.com>